# Sweeps_Scout

./: .gitignore  README.md  TODO.md  pyproject.toml
data/candidates/: classification_hints.json  corporate_entities_candidates.csv  deduped_candidates.json  discovered_domains.json  discovered_pages.json  extracted_signals.json  intel_bridge.json  normalized_candidate_rows.json  operators_candidates.csv  promoters_candidates.csv  proposed_entities.json  proposed_relationships.json  raw_intake_rows.json  redirect_candidates.json  redirects_rebrands_candidates.csv  rejected_or_ambiguous_candidates.csv
data/raw_sources/: sweeps_lists_set1.md  sweeps_lists_set2.md  sweeps_web_new_candidates_2026_04.csv
data/seeds/: allow_domains.txt  bootstrap_domains.txt  deny_domains.txt  seed_urls.txt
docs/: key_rotation.md
keys/: README.md
reports/discovery/: discover-2026-04-19T14-28-16.744002+00-00.json  discover-2026-04-19T14-28-53.011736+00-00.json  discover-2026-04-19T14-32-49.023736+00-00.json
reports/extraction/: extract-2026-04-19T14-28-20.466952+00-00.json  extract-2026-04-19T14-29-14.722180+00-00.json  extract-2026-04-19T14-32-54.042792+00-00.json
reports/monitoring/: monitor-2026-04-19T14-28-16.743464+00-00.json  monitor-2026-04-19T14-28-53.011127+00-00.json  monitor-2026-04-19T14-32-49.023463+00-00.json
scripts/: trust_store_entry.py
tests/: test_bulk_intake.py  test_candidate_intake.py  test_discover.py  test_emit.py  test_extract.py  test_monitor.py  test_redirects.py  test_research_mesh.py  test_trust_store_entry_script.py  test_web_candidates.py
(+39 files in other folders)
