[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sweep-scout"
version = "0.1.0"
description = "Active discovery and monitoring for the sweeps ecosystem (candidates only, not reviewed truth)."
readme = "README.md"
requires-python = ">=3.10"
# Single runtime dependency: Ed25519 signing for optional signed artifacts (envelope per docs/SIGNING.md).
# Do not hand-roll crypto; use cryptography.
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
